--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -54,7 +54,7 @@
   </section>
 
   <div id="xc-carousel" class="xc-carousel">
-    <a class="nav prev" href="#"></a>
+    <a class="nav prev" href="javascript:void(0)"></a>
     <div class="carousel_items_holder">
         <ul class="carousel_items">
           <!-- 图片数量尽量大于5张 -->
@@ -63,8 +63,10 @@
           <li><%= image_tag("school-2.jpg")%></li>
           <li><%= image_tag("school-3.png")%></li>
           <li><%= image_tag("school-4.jpg")%></li>
+          <li><%= image_tag("school-1.jpg")%></li>
+          <li><%= image_tag("school-2.jpg")%></li>
         </ul>
     </div>
-    <a class="nav next" href="#"></a>
+    <a class="nav next" href="javascript:void(0)"></a>
   </div>
 </div>
