--- a/app/views/courses/course_praise.js.erb
+++ b/app/views/courses/course_praise.js.erb
@@ -4,13 +4,15 @@ if(praise == "praise"){
 	$("#praiseFont").attr("ispraise","false");
 	new_count = parseInt($("#praiseFont").attr("count")) - 1;
 	$("#praiseFont").attr("count",new_count);
-	$("#praiseFont").text(new_count + "个赞");
+	$("#praiseFont").text(new_count);
+	$("#praiseIcon").addClass("text-muted");
 	alert("已取消赞");
 }else{
 	$("#praiseFont").attr("ispraise","true");
 	new_count = parseInt($("#praiseFont").attr("count")) + 1;
 	$("#praiseFont").attr("count",new_count);
 	$("#praiseFont").text(new_count + "个赞");
+	$("#praiseIcon").removeClass("text-muted");
 	alert("已赞");
 }
 
