--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,5 @@
 <%= content_for :script do %>
   <%= javascript_tag do %>
-    user_login = <%= current_user.present? %>
     course_praise_path = "<%= course_praise_courses_path%>"
     course_collect_path = "<%= course_collect_courses_path%>"
   <% end %>
@@ -28,7 +27,7 @@
       </div>
       <div class="course-and-score">
         <%= link_to "课后作业", after_class_courses_path, class: "course"%>
-        <%= link_to "成绩查询", "", class: "score"%>
+        <%= link_to "成绩查询", teacher_signed_in? ? my_score_teachers_path : my_exams_user_index_path, class: "score"%>
       </div>
     </div>
 
@@ -37,20 +36,22 @@
       <div class="collect-zan-btns">
         <%= form_tag course_collect_courses_path, method: :post, remote: true, id: "courseCollectPraise" do %>
           <%= hidden_field_tag "course_id", @course.id%>
-          <button id="courseCollectBtn" type="button" class="btn btn-default <%= current_user.blank? ? 'btn-default-no' : '' %>">
-            <span class="glyphicon glyphicon-star"></span>
+          <button id="courseCollectBtn" type="button" class="btn btn-default">
             <% collect_count = @course.get_likes(vote_scope: :collect).size %>
+            <% is_collect = current_user.present? && (current_user.voted_up_on? @course,vote_scope: :collect) %>
+            <span id="collectIcon" class="glyphicon glyphicon-star <%= 'text-muted' if !is_collect %>"></span>
             <span id="collectFont" count="<%= collect_count %>" 
-              iscollect = "<%= current_user.present? && (current_user.voted_up_on? @course,vote_scope: :collect) %>" >
-              <%= collect_count %>人收藏
+              iscollect = "<%= is_collect %>" >
+              <%= collect_count %>
             </span>
           </button>
-          <button id="coursePraiseBtn" type="button" class="btn btn-default <%= current_user.blank? ? 'btn-default-no' : '' %>">
-            <span class="glyphicon glyphicon-heart"></span>
+          <button id="coursePraiseBtn" type="button" class="btn btn-default">
             <% praise_count = @course.get_likes(vote_scope: :praise).size %>
+            <% is_praise = current_user.present? && (current_user.voted_up_on? @course,vote_scope: :praise) %>
+            <span id="praiseIcon" class="glyphicon glyphicon-heart <%= 'text-muted' if !is_praise %>"></span>
             <span id="praiseFont" count="<%= praise_count %>" 
-              ispraise = "<%= current_user.present? && (current_user.voted_up_on? @course,vote_scope: :praise) %>" >
-              <%= praise_count %>个赞
+              ispraise = "<%= is_praise %>" >
+              <%= praise_count %>
             </span>
           </button>
         <% end %>
