--- a/app/views/teachers/_left_bar.html.erb
+++ b/app/views/teachers/_left_bar.html.erb
@@ -62,7 +62,7 @@
       $("#left-bar .list li").eq(1).find("a").addClass("active");
       $("#left-bar .list li").eq(1).siblings().find("a").removeClass("active");
     }
-    else if("<%= controller.controller_path %>" == "teachers" && <%= ["my_score","select_grade","select_course","show_score"].include? controller.action_name %>){
+    else if("<%= controller.controller_path %>" == "teachers" && <%= ["my_score","select_grade","select_course","show_score","show_grade_score"].include? controller.action_name %>){
       $("#left-bar .list .list-bg").css("top", "194px");
       $("#left-bar .list li").eq(2).find("a").addClass("active");
       $("#left-bar .list li").eq(2).siblings().find("a").removeClass("active");
