user # to javascript:void(0)

--- a/app/views/user/discuss_center.html.erb
+++ b/app/views/user/discuss_center.html.erb
@@ -37,7 +37,7 @@
               <div class="col-sm-9">
                 <h5>
                   <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
-                  <%= link_to comment.body,show_sub_courses_courses_path(comment.try(:commentable).try(:number))%>
+                  <%= link_to comment.body,show_sub_courses_path(comment.try(:commentable).try(:number),course_number: comment.try(:commentable).try(:course).try(:number))%>
                 </h5>
                 <p>
                   <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
@@ -45,7 +45,7 @@
                     <span class="text-muted">[最新回答]</span>
                     <span><%= comment.children.last.try(:usertable).try(:show_name) %>:<span>
                     <span class="text-muted">
-                      <%= link_to comment.children.last.try(:body),show_sub_courses_courses_path(comment.try(:commentable).try(:number))%>
+                      <%= link_to comment.children.last.try(:body),show_sub_courses_path(comment.try(:commentable).try(:number),course_number: comment.try(:commentable).try(:course).try(:number))%>
                     </span>
                   <% else %>
                     <span class="text-muted">嗯 ~ ~，这个提问大家都在考虑....</span>
