--- a/app/views/user/my_exams.html.erb
+++ b/app/views/user/my_exams.html.erb
@@ -16,8 +16,8 @@
 	  <div class="row self-main-context">
 
 	    <ul class="nav nav-pills show-content">
-        <li role="presentation" class="active"><%= link_to "完成的考试","#" %></li>
-        <li role="presentation"><%= link_to "即将开始的考试","#" %></li>
+        <li role="presentation" class="active"><%= link_to "完成的考试","javascript:void(0);" %></li>
+        <li role="presentation"><%= link_to "即将开始的考试","javascript:void(0);" %></li>
       </ul>
 
       <!-- ###########################完成的考试########################## -->
