--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -11,8 +11,8 @@
 
 	<div class="row self-main-context">
 	  <ul class="nav nav-pills show-content">
-		<li role="presentation" class="active"><a href="#">个人资料</a></li>
-		<li role="presentation"><a href="#">修改密码</a></li>
+		<li role="presentation" class="active"><a href="javascript:void(0);">个人资料</a></li>
+		<li role="presentation"><a href="javascript:void(0);">修改密码</a></li>
 	  </ul>
 
 	  <div class="container div-form div-content">
