--- a/app/views/teachers/my_answers.html.erb
+++ b/app/views/teachers/my_answers.html.erb
@@ -26,12 +26,12 @@
 			  		 		    <%= current_teacher.show_name %>
 			  		 		    <span>回答</span>
 			  		 		  </p>
-			  		 		  <p class="content"><%= link_to comment.body,show_sub_courses_courses_path(comment.try(:commentable).try(:number))%> </p>
+			  		 		  <p class="content"><%= link_to comment.body,show_sub_courses_path(comment.try(:commentable).try(:number),course_number: comment.try(:commentable).try(:course).try(:number))%> </p>
 			  		 		  <% if comment.parent.present? %>
                     <p><span class="text-muted">[问题]</span>
                     <span><%= comment.parent.try(:usertable).try(:show_name) %>:<span>
                     <span class="text-muted">
-                    <%= link_to comment.parent.body,show_sub_courses_courses_path(comment.try(:commentable).try(:number))%>
+                    <%= link_to comment.parent.body,show_sub_courses_path(comment.try(:commentable).try(:number),course_number: comment.try(:commentable).try(:course).try(:number))%>
                     </span></p>
 			           <% end %>
 			  		 		  <p class="time">时间: <%= comment.created_at.try(:strftime,'%Y-%m-%d %H:%M:%S') %></p>
