--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -944,7 +944,7 @@ body.teachers__my_courses, body.teachers__my_grades, body.teachers__grade_studen
 body.teachers__my_account, body.teachers__upload_course_ware,
 body.teachers__my_questions, body.teachers__my_answers, body.teachers__discuss_center,
 body.teachers__my_score, body.teachers__select_grade, body.teachers__select_course,
-body.teachers__show_score, body.teachers__show_grade_score {
+body.teachers__show_score, body.teachers__show_grade_score, body.teachers__import_question {
   .main-content {
     .teacher-content {
       margin-top: 20px;
@@ -956,6 +956,10 @@ body.teachers__show_score, body.teachers__show_grade_score {
       .nav-bar {
         padding: 0 46px;
         margin-top: 5px;
+      }
+      .question-list {
+      	overflow: hidden;
+      	padding: 20px;
       }
       ul#subCoursesList {
       	padding: 20px 0 60px 0;
