--- a/app/views/sub_courses/show.html.erb
+++ b/app/views/sub_courses/show.html.erb
@@ -19,24 +19,26 @@
 				<source type="video/webm" src="myvideo.webm" />
 				<source type="video/ogg" src="myvideo.ogv" />
 			</video>
-			<div class="collect-content">
-				<%= form_tag sub_courses_collect_or_praise_path, method: :post, remote: true, id: "subCourseCollectPraise" do %>
-				<%= hidden_field_tag "sub_course_id", @sub_course.id%>
-				<%= hidden_field_tag "scope", '' %>
-					<div class="collect">
-					  <%= link_to "javascript:void(0);", scope: "praise" do %>
-					  	<span class="glyphicon glyphicon-heart <%= @sub_course.is_praise? ? 'glyphicon-pink' : '' %>"></span>
-					  	<span><%= @sub_course.get_likes(vote_scope: :praise).size %></span>
-					  <% end %>
-					</div>
-				  <div class="collect">
-					  <%= link_to "javascript:void(0);", scope: "collect" do %>
-					    <span class="glyphicon glyphicon-star <%= @sub_course.is_collect? ? 'glyphicon-orange' : '' %>"></span>
-					  	<span><%= @sub_course.get_likes(vote_scope: :collect).size %></span>
-					  <% end %>
-					</div>
-				<% end %>
-			</div>
+			<% if !teacher_signed_in? %>
+				<div class="collect-content">
+					<%= form_tag sub_courses_collect_or_praise_path, method: :post, remote: true, id: "subCourseCollectPraise" do %>
+					<%= hidden_field_tag "sub_course_id", @sub_course.id%>
+					<%= hidden_field_tag "scope", '' %>
+						<div class="collect">
+						  <%= link_to "javascript:void(0);", scope: "praise" do %>
+						  	<span class="glyphicon glyphicon-heart <%= @sub_course.is_praise? ? 'glyphicon-pink' : '' %>"></span>
+						  	<span><%= @sub_course.get_likes(vote_scope: :praise).size %></span>
+						  <% end %>
+						</div>
+					  <div class="collect">
+						  <%= link_to "javascript:void(0);", scope: "collect" do %>
+						    <span class="glyphicon glyphicon-star <%= @sub_course.is_collect? ? 'glyphicon-orange' : '' %>"></span>
+						  	<span><%= @sub_course.get_likes(vote_scope: :collect).size %></span>
+						  <% end %>
+						</div>
+					<% end %>
+				</div>
+			<% end %>
 		</div>
 
 		<div id="commentContent" class="comments-content">
@@ -50,15 +52,12 @@
 				相关视频
 			</p>
 			<ul class="videos">
-				<li>
-					<%= image_tag "video-play2.jpg", class:"photo2"%>
-				</li>
-				<li>
-					<%= image_tag "video-play2.jpg", class:"photo2"%>
-				</li>
-				<li>
-					<%= image_tag "video-play2.jpg", class:"photo2"%>
-				</li>
+				<% @video.each do |video| %>
+					<li>
+						<%= image_tag "video-play2.jpg", class:"photo2"%>
+            <p><%= video.name %></p>
+					</li>
+				<% end %>
 			</ul>
 			<div class="buttons">
 				<%= link_to "课后作业", after_class_courses_path(@course.number), class: "btn btn-primary"%>
