--- a/app/views/teachers/discuss_center.html.erb
+++ b/app/views/teachers/discuss_center.html.erb
@@ -28,13 +28,13 @@
 		  		 		    <span>提问</span>
 		  		 		  </p>
 		  		 		  <p class="content">
-                  <%= link_to comment.body,show_sub_courses_courses_path(comment.try(:commentable).try(:number))%>
+                  <%= link_to comment.body,show_sub_courses_path(comment.try(:commentable).try(:number),course_number: comment.try(:commentable).try(:course).try(:number))%>
                 </p>
 		  		 		  <% if comment.has_children? %>
-		                    <p><span class="text-muted">[最新回答]</span>
-		                    <span><%= comment.children.last.try(:usertable).try(:show_name) %>:<span>
-		                    <span class="text-muted"> <%= link_to comment.children.last.try(:body),show_sub_courses_courses_path(comment.try(:commentable).try(:number))%></span></p>
-		                  <% end %>
+                  <p><span class="text-muted">[最新回答]</span>
+                  <span><%= comment.children.last.try(:usertable).try(:show_name) %>:<span>
+                  <span class="text-muted"> <%= link_to comment.children.last.try(:body),show_sub_courses_path(comment.try(:commentable).try(:number),course_number: comment.try(:commentable).try(:course).try(:number))%></span></p>
+		            <% end %>
 		  		 		  <p class="time">时间: <%= comment.created_at.try(:strftime,'%Y-%m-%d %H:%M:%S') %></p>
 	  		 		  </div>
 	  		 		  <div class="answer-broswer">
