--- a/app/views/courses/_sub_course.html.erb
+++ b/app/views/courses/_sub_course.html.erb
@@ -2,19 +2,23 @@
   <% sub_courses.each do |sub_course|%>
     <% if sub_course.regex_video %>
       <li>
-        <!-- 如果是视频如mp4, flv等格式文件进入播放页 -->
-        <a href= <%= show_sub_courses_path(number: sub_course.number, course_number: @course.number) %> class="title"><%= sub_course.name %></a>
-        <a href="" class="total">格式<%= file_format(sub_course.attachment.content_file_name)%></a>
-        <!-- 显示文件大小 -->
-        <a href="" class="already">（文件<%= sub_course.count_file_size%>）</a>
+          <!-- 如果是视频如mp4, flv等格式文件进入播放页 -->
+          <%= link_to show_sub_courses_path(number: sub_course.number, course_number: @course.number) do %>
+          <span class="title"><%= sub_course.name %></span>
+          <span class="total">格式<%= file_format(sub_course.attachment.content_file_name)%></span>
+          <!-- 显示文件大小 -->
+          <span class="already">（文件<%= sub_course.count_file_size%>）</span>
+        <%end%>
       </li>
       <!-- 如果是视频如pdf, docx等格式文件执行下载 -->
     <% elsif sub_course.regex_res %>
       <li>
-        <%=link_to sub_course.name, download_sub_course_path( sub_course.number), class: "title" %>
-        <a href="" class="total">格式<%= file_format(sub_course.attachment.content_file_name)%></a>
-        <!-- 显示文件大小 -->
-        <a href="" class="already">（文件<%= sub_course.count_file_size%>）</a>
+        <%=link_to download_sub_course_path( sub_course.number), class: "title" do %>
+          <span class="title"><%= sub_course.name %></span>
+          <span class="total">格式<%= file_format(sub_course.attachment.content_file_name)%></span>
+          <!-- 显示文件大小 -->
+          <span class="already">（文件<%= sub_course.count_file_size%>）</span>
+        <% end %>
       </li>
     <% end %>
   <% end %>
