--- a/app/views/teachers/my_courses.html.erb
+++ b/app/views/teachers/my_courses.html.erb
@@ -4,7 +4,9 @@
   <div class="teacher-content teacher-wrapper">
   	<div class="nav-bar">
   		<span class="btn btn-primary by-btn-bg">课程中心</span>
-      <%= link_to "创建子课程", new_sub_course_path, remote: true, class: 'btn btn-primary by-btn-bg pull-right'%>
+      <%= link_to new_sub_course_path, remote: true, class: 'btn btn-success pull-right' do %>
+        <span class="glyphicon glyphicon-plus">创建子课程</span>
+      <% end %>
   	</div>
     <% if @courses.present? %>
       <ul id="subCoursesList">
