--- a/app/views/teachers/select_course.html.erb
+++ b/app/views/teachers/select_course.html.erb
@@ -28,7 +28,6 @@
 		  </div>
 		  <% end %>
 		<% end %>
-		
 		<% if @courses.length % 4 != 3 %>
 		   </div>
 		<% end %>
@@ -39,8 +38,11 @@
 	  <%= hidden_field_tag "academy_id", params[:academy_id]%>
 	  <%= hidden_field_tag "grade_ids", @grade_ids %>
 	  <div class="search-score-btn">
-		<button type="button" class="btn btn-primary btn-lg" onclick="this.form.action='<%= select_grade_teachers_path%>';this.form.submit();">上一步</button>
-		<%= submit_tag "下一步", class: "btn btn-danger btn-lg", id: "nextStep", disabled: true %>
+		<button type="button" class="btn btn-primary btn" onclick="this.form.action='<%= select_grade_teachers_path%>';this.form.submit();">
+		<span class="glyphicon glyphicon-hand-left"></span>上一步</button>
+		<%= button_tag(type: 'submit', class: "btn btn-success", id: "nextStep", disabled: true) do %>
+		  下一步  <span class="glyphicon glyphicon-hand-right"></span>
+	  <% end %>
 	  </div>
 	<% end %>
 
