--- a/app/views/teachers/my_score.html.erb
+++ b/app/views/teachers/my_score.html.erb
@@ -33,11 +33,13 @@
 		<% end %>
 
 		<div class="search-score-btn">
-		  <%= submit_tag "下一步", class: "btn btn-primary btn-lg", disabled: params[:academy_id].blank? , id: "nextStep"%>
-		  <a href="<%= root_path%>" class="btn btn-danger btn-lg">返回首页</a>
+		  <a href="<%= root_path%>" class="btn btn-danger">
+		    <span class="glyphicon glyphicon-home"></span> 返回首页
+		  </a>
+		  <%= button_tag(type: "submit", class: "btn btn-primary", disabled: params[:academy_id].blank? , id: "nextStep") do %>
+		    下一步  <span class="glyphicon glyphicon-hand-right"></span>
+		  <% end %>
 		</div>
 	<% end %>
-	
-
   </div>
 </div>
