--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -16,8 +16,8 @@
       <%end%>
     </li>
     <li>
-      <%= link_to "" do %>
-        <span class="glyphicon glyphicon-home">首页</span>
+      <%= link_to admin_specialties_path do %>
+        <span class="glyphicon glyphicon-home">专业列表</span>
       <%end%>
     </li>
     <li>
