--- a/app/views/admin/specialties/index.html.erb
+++ b/app/views/admin/specialties/index.html.erb
@@ -24,7 +24,7 @@
     <tr>
       <th class="text-center">编号</th>
       <th class="text-center">专业名称</th>
-      <th class="text-center">院系代码</th>
+      <th class="text-center">所属院系</th>
       <th class="text-center">专业代码</th>
       <th class="text-center" colspan="3">操作</th>
     </tr>
