--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,7 +2,7 @@
   <li>
     <a href="#{admin_root_path}">后台</a>
   </li>
-  <li class="active">教师列表</li>
+  <li class="active">学生列表</li>
 <%end%>
 
 <%= content_for :toolbar do %>
