--- a/app/views/admin/specialties/_form.html.erb
+++ b/app/views/admin/specialties/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="form-group">
     <%= f.label :academy_id, '所属院系', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
-      <%= f.select(:academy_id, Academy.all.collect{ |p| [p.name, p.id]}, {prompt: '请选择学院'}, {class: 'form-control'}) %>
+      <%= f.select(:academy_id, Academy.all.pluck(:name, :id), {prompt: '请选择学院'}, {class: 'form-control'}) %>
     </div>
   </div>
   <div class="form-group">
