--- a/app/views/admin/specialties/_specialty.html.erb
+++ b/app/views/admin/specialties/_specialty.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= specialty.id %></td>
   <td><%= specialty.name %></td>
-  <td><%= specialty.academy_id %></td>
+  <td><%= specialty.try(:academy).try(:name) %></td>
   <td><%= specialty.code %></td>
   <td>
     <%= link_to [:admin, specialty], class: 'btn btn-xs btn-info', title: '查看' do %>
@@ -10,7 +10,7 @@
     <%= link_to edit_admin_specialty_path(specialty), class: 'btn btn-xs btn-default', title: '编辑' do %>
       <span class="glyphicon glyphicon-eye-open"></span>
     <%end%>
-    <%= link_to nil, class: 'btn btn-xs btn-danger', title: '删除' do %>
+    <%= link_to admin_specialty_path(specialty), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
       <span class="glyphicon glyphicon-eye-open"></span>
     <%end%>
   </td>
